# guide-pytest-parameterization

./: .gitignore  README.md  pyproject.toml  requirements.txt  requiremets.txt  run.bat  run.sh
test/: test_alluried_sum.py  test_sum.py
