[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest_parameterization"
version = "0.0.0"
description = "Demo project for the guide on parameterizing Pytest tests with Allure Report."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9"
]
dependencies = [
    # Put the project's production dependencies here:
    "allure-pytest==2.13.5",
    "allure-python-commons==2.13.5",
    "attrs==25.1.0",
    "exceptiongroup==1.2.2",
    "flake8==7.1.2",
    "flake8-builtins==2.5.0",
    "iniconfig==2.0.0",
    "mccabe==0.7.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pycodestyle==2.12.1",
    "pyflakes==3.2.0",
    "pytest==8.3.4",
    "tomli==2.2.1",
]

[project.optional-dependencies]
dev = [
    # Put the project's dev dependencies here:
    "allure-pytest",
    "flake8",
    "flake8-builtins",
]

[tool.pytest.ini_options]
testpaths = ["test"]

addopts = [
    "--alluredir", "allure-results",
]